@@ -51,6 +51,9 @@
     <Compile Include="PerformanceResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Results\CsvResultPresenter.cs" />
+    <Compile Include="Results\HtmlResultPresenter.cs" />
+    <Compile Include="Results\ResultPresenter.cs" />
     <Compile Include="Serializers\BFSerializer.cs" />
     <Compile Include="Serializers\DCSerializer.cs" />
     <Compile Include="Serializers\ISerializer.cs" />
