@@ -6,7 +6,7 @@
         public string SerializerName { get; private set; }
         public Measurement SerializeTime { get; private set; }
         public Measurement DeserializeTime { get; private set; }
-        public Measurement Size { get; private set; }
+        public long Size { get; set; }
 
         public string Failure { get; set; }
 
@@ -14,7 +14,6 @@
         {
             SerializeTime = new Measurement();
             DeserializeTime = new Measurement();
-            Size = new Measurement();
             TestCase = testCase;
             SerializerName = serializerName;
         }
@@ -24,8 +23,8 @@
             if (!string.IsNullOrWhiteSpace(Failure))
                 return string.Format("{0}[{1}]: {2}\n\n", SerializerName, TestCase, Failure);
 
-            return string.Format("{0}[{1}]:\n Serialization Time: {2},\n Deserialization Time: {3},\n Serialized Data Size: {4}\n\n",
-                SerializerName, TestCase, SerializeTime, DeserializeTime, Size);
+            return string.Format("{0}[{1}]:\n Serialized Data Size: {2},\n Serialization Time: {3},\n Deserialization Time: {4}\n\n",
+                SerializerName, TestCase, Size, SerializeTime, DeserializeTime);
         }
     }
 }
