@@ -1,0 +1,57 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Globalization;
+using System.Linq;
+using System.Text;
+
+namespace ObjectSerialization.Performance.Results
+{
+    internal class CsvResultPresenter : ResultPresenter
+    {
+        public CsvResultPresenter(IEnumerable<PerformanceResult> results)
+            : base("csv", results) { }
+
+        public override string Present()
+        {
+            var sb = new StringBuilder();
+
+            WriteHeaders(sb);
+            foreach (var testCase in TestCases)
+                WriteCase(sb, testCase, GetResultsFor(testCase).ToArray());
+            return sb.ToString();
+        }
+
+        private void WriteCase(StringBuilder sb, string testCase, PerformanceResult[] results)
+        {
+            WriteCase(sb, testCase, "Data size", results, c => FormatSize(c.Size));
+            WriteCase(sb, testCase, "Serialization time", results, c => FormatTimeSpan(c.SerializeTime.Total));
+            WriteCase(sb, testCase, "Deserialization time", results, c => FormatTimeSpan(c.DeserializeTime.Total));
+            WriteCase(sb, testCase, "Total time", results, c => FormatTimeSpan(c.SerializeTime.Total + c.DeserializeTime.Total));
+        }
+
+
+
+        private void WriteCase(StringBuilder sb, string testCase, string category, IEnumerable<PerformanceResult> results, Func<PerformanceResult, string> valueGetter)
+        {
+            WriteCell(sb, testCase);
+            WriteCell(sb, category);
+            foreach (var result in results)
+                WriteCell(sb, result.Failure == null ? valueGetter(result).ToString(CultureInfo.InvariantCulture) : "error");
+            sb.Append("\n");
+        }
+
+        private static void WriteCell(StringBuilder sb, object value)
+        {
+            sb.Append(value).Append(';');
+        }
+
+        private void WriteHeaders(StringBuilder sb)
+        {
+            WriteCell(sb, "Test Case");
+            WriteCell(sb, "Category");
+            foreach (var serializer in SerializerNames)
+                WriteCell(sb, serializer);
+            sb.Append("\n");
+        }
+    }
+}
